<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:foregroundTint="#090808"

    >


    <TextView
        android:id="@+id/textView4"
        android:layout_width="213dp"
        android:layout_height="42dp"
        android:rotationX="3"
        android:text="@string/hey_welcome"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.294" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login1"
        android:textColor="@color/black"
        android:textColorHint="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/editTextTextUsername"
        android:layout_width="330dp"
        android:layout_height="80dp"
        android:layout_marginTop="12dp"
        android:drawablePadding="40dp"
        android:drawableTint="@color/black"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="text"
        android:paddingStart="30dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/black"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/black"
        android:textColorLink="@color/black"
        android:textCursorDrawable="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/editTextLoginPassword"
        android:layout_width="330dp"
        android:layout_height="80dp"
        android:drawablePadding="40dp"
        android:ems="10"
        android:hint="@string/password1"
        android:inputType="textPassword"
        android:paddingStart="30dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="#FAF6F6"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/black"
        android:textColorLink="@color/black"
        android:textCursorDrawable="@color/design_default_color_background"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextUsername" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="281dp"
        android:layout_height="60dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/black1"
        android:text="@string/login22"
        android:textColor="@color/white"
        android:textColorHighlight="@color/black"
        android:textColorLink="#000000"
        android:textSize="24sp"
        app:iconTint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLoginPassword"
        app:rippleColor="@color/black" />

    <Button
        android:id="@+id/haveaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/black1"
        android:text="@string/create_for_new_user"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:iconTint="#090808"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />



</androidx.constraintlayout.widget.ConstraintLayout>